# bench_object_registration

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  main.cpp
cmake/: conan_provider.cmake  lto_support.cmake  utils.cmake
include/compile_time_by_variant/: arithmetic_operations.hpp  do_math.hpp
include/compile_time_by_variant_factory/: do_math.hpp
include/compile_time_by_variant_self_reg/: do_math.hpp
include/naive_by_condition/: do_math.hpp
include/virtual_factory/: do_math.hpp
include/virtual_factory_self_reg/: do_math.hpp
src/compile_time_by_variant/: CMakeLists.txt  arithmetic_operations.cpp  do_math.cpp
src/compile_time_by_variant_factory/: CMakeLists.txt  do_math.cpp
src/compile_time_by_variant_self_reg/: CMakeLists.txt  do_math.cpp
src/naive_by_condition/: CMakeLists.txt  do_math.cpp
src/virtual_factory/: CMakeLists.txt  do_math.cpp
src/virtual_factory_auto_reg/: CMakeLists.txt  do_math.cpp
src/virtual_factory_self_reg/: CMakeLists.txt  do_math.cpp
tests/benchmark/: CMakeLists.txt  bench_do_math.cpp
tests/unit_tests/: CMakeLists.txt  test_do_math.cpp
